# PointCloudSelection

ipa_pointcloud_selection/: CMakeLists.txt  package.xml
ipa_pointcloud_selection/ros/include/: ipa_database_generation.h
ipa_pointcloud_selection/ros/src/: ipa_database_generation.cpp
publish_selected_patch/src/: publish_selected_patch.cpp
