<?xml version="1.0"?>
<package format="2">
	<name>ipa_pointcloud_selection</name>
	<version>0.0.0</version>
	<description>Extracting parts of a point cloud.</description>

	<license>IPA</license>

	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<author email="joel.schmidt@ipa.fraunhofer.de">Joel Schmidt</author>


	<buildtool_depend>catkin</buildtool_depend>
        <build_depend>roslaunch</build_depend>

	<depend>boost</depend>
	<depend>eigen_conversions</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
        <depend>cv_bridge</depend>
        <depend>image_transport</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>

	<export>
	  <publish_selected_patch plugin="${prefix}/plugin_description.xml" />
	</export>

	

</package>
